# buscador-de-cosas

./: LICENSE  README.md  pyproject.toml
base/: package.py
base/python/: _context_managers.py  buscador_de_cosas.py  buscador_de_cosas.pyi
base/tests/: test_standalone.py
buscador_de_cosas/: Makefile  _constants.py  _constants.pyi  _context_managers.py  _context_managers.pyi  _decorators.pyi  _delegates.py  _delegates.pyi  _main.py  _main.pyi  _widgets.py  _widgets.pyi  package.py
buscador_de_cosas/python/: _constants.py  _context_managers.py  _context_managers.pyi  _decorators.py  buscador_de_cosas.py  buscador_de_cosas.pyi
buscador_de_cosas/tests/: test_standalone.py
examples/: houdini.py  maya.py  simple.py
houdini/: Makefile
houdini/python/: buscador_de_cosas.py  buscador_de_cosas.pyi
maya/: Makefile
maya/python/: buscador_de_cosas_maya.py  buscador_de_cosas_maya.pyi  dockableWorkspaceWidget.py
python/: buscador_de_cosas.py
