[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "buscador_de_cosas"
version = "1.1.3"
authors = [
    { name="Adam Levasseur", email="letmeadam@gmail.com" },
]
dependencies = [
    "Qt.py < 1.4.4",
    "six >= 1.17",
    # "PySide2-5.15+<6",
    # "PySide6 >= 6.8",
]
description = "A Qt UI runtime debugger"
readme = "README.md"
# requires-python = ">=3.9"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/letmeadam/buscador-de-cosas"
Issues = "https://github.com/letmeadam/buscador-de-cosas/issues"

[tools.setuptools.packages.find]
include = ["buscador_de_cosas"]


